name:                meme-tutorial
version:             0.1.0.0
homepage:            https://github.com/githubuser/meme-tutorial#readme
license:             BSD3
license-file:        LICENSE
author:              Stefan Wehr, Alexander Thiemann
maintainer:          thiemann@cp-med.com
copyright:           2017 Stefan Wehr, Alexander Thiemann
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MemeGen
  ghc-options:         -Wall -Werror
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , gd
                     , mtl
                     , text
  default-language:    Haskell2010
  ghc-options:       -Wall -Werror

executable memegen
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , meme-tutorial
                     , bytestring
  default-language:    Haskell2010

executable meme-tutorial-server
  hs-source-dirs:      server
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Spock-core
                     , Spock-lucid
                     , bytestring
                     , http-types
                     , lucid
                     , mtl
                     , unordered-containers
                     , meme-tutorial
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/agrafix/meme-tutorial
